<resources>
    <string name="app_name">ReflectR</string>
    <string name="logo">LOGO</string>
    <string name="app_desc">Your Best Personal Journal and Mood Tracking Solution</string>
    <string name="next">NEXT</string>
    <string name="arrow">arrow</string>
    <string name="get_started">Get Started</string>
    <string name="illustration">illustration</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify">Verify</string>
    <string name="otp">OTP</string>
    <string name="hint">Hint</string>
    <string name="resend_otp">resend_otp</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="oops">Oops</string>
    <string name="reload">Reload</string>
    <string name="username">Username</string>
    <string name="personal_details">Personal Details</string>
    <string name="email">Email</string>
    <string name="country">country</string>
    <string name="city">City</string>
    <string name="bio">Bio</string>
    <string name="age">Age</string>
    <string name="submit">Submit</string>
    <string name="journals">Journals</string>
    <string name="analytics">Analytics</string>
    <string name="calender">Calender</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_are_you">How are you?</string>
    <string name="category">Enter Category</string>
    <string name="select_emotions">Select Emotions</string>
    <string name="quick_note">Quick Note</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="private_string">Private</string>
    <string name="public_string">Public</string>
    <string name="add_journal">Add Journal</string>
    <string name="title">Title</string>
    <string name="please_wait">Please Wait...</string>
    <string name="add">Add</string>
    <string name="avg_mood">Avg mood</string>
    <string name="ok">ok</string>
    <string name="cancel">Cancel</string>
</resources>