<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/journals"
        android:icon="@drawable/icon_selector_journal"
        android:enabled="true"
        android:title="@string/journals" />
    <item
        android:id="@+id/analytics"
        android:enabled="true"
        android:icon="@drawable/icon_selector_analytics"
        android:title="@string/analytics" />
    <item
        android:id="@+id/calender"
        android:enabled="true"
        android:icon="@drawable/icon_selector_calender"
        android:title="@string/calender" />
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/icon_selector_settings"
        android:title="@string/settings" />
</menu>