<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_primary99"
    tools:context=".NoNetworkActivity">

    <ImageView
        android:id="@+id/no_network_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277"
        app:srcCompat="@drawable/ic_no_network"
        app:tint="@color/material_dynamic_primary60"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/no_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_connection"
        android:textColor="@color/material_dynamic_secondary40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_network_logo"
        app:layout_constraintVertical_bias="0.110000014" />

    <TextView
        android:id="@+id/oops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oops"
        android:textColor="@color/material_dynamic_primary60"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/no_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_network_logo" />

    <Button
        android:id="@+id/reload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/material_dynamic_primary60"
        android:text="@string/reload"
        android:textColor="@color/material_dynamic_neutral99"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>